--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,1 +1,43 @@
 <app-navbar></app-navbar>
+
+<div class="container pt-100 mb-5">
+    <div class="row">
+        <div class="col-3">
+            <div class="list-group">
+                <a href="#" class="list-group-item list-group-item-action">Categorie 1</a>
+                <a href="#" class="list-group-item list-group-item-action">Categorie 2</a>
+                <a href="#" class="list-group-item list-group-item-action">Categorie 3</a>
+                <a href="#" class="list-group-item list-group-item-action">Categorie 4</a>
+                <a href="#" class="list-group-item list-group-item-action">Categorie 5</a>
+            </div>
+        </div>
+        <div class="col-9">
+            <div class="row">
+                <ng-container *ngFor="let product of getProducts">
+                    <div class="col-md-4">
+                        <div class="card mb-3">
+                            <img class="imgHeight" src="/assets/img/{{product.imageUrl}}" alt="{{product.name}}">
+                            <div class="card-body">
+                                <h4 class="card-title">
+                                    <a href="">
+                                    {{product.name}}
+                                    </a>
+                                </h4>
+                                <div class="border-top py-4">
+                                    {{product.description}}
+                                </div>
+                                <small class="text-muted">
+                                    <i class="fas fa-euro-sign"></i> {{product.price}}
+                                </small>
+                            </div>
+                            <div class="card-footer text-center">
+                                <button class="btn btn-outline-primary btn-sm">Details</button>
+                                <button class="btn btn-outline-primary btn-sm ml-3">Add To Cart</button>
+                            </div>
+                        </div>
+                    </div>
+                </ng-container>
+            </div>
+        </div>
+    </div>
+</div>
